# hackfest-25.4

./: .gitignore  README.md  prompts.md
agent/: package-lock.json  package.json  tsconfig.json  vite.config.ts
agent/app/: app.css  root.tsx  routes.ts
agent/app/components/: code-example.tsx  dark-mode-toggle.tsx  error-boundary.tsx  nasa-logo.tsx  welcome.tsx
agent/app/components/ui/: card.tsx  tabs.tsx
agent/app/contexts/: dark-mode-context.tsx
agent/app/hooks/: use-dark-mode.ts
agent/app/routes/: chat.tsx  home.tsx
agent/app/welcome/: welcome.tsx
mcp/fastmcp-node/: package-lock.json  package.json  server.js
mcp/fastmcp-python/: pyproject.toml  server.py
