[project]
name = "fastmcp-python"
version = "0.0.1"
description = "Basic FastMCP implementation for the common metadata repository using Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.4",
    "earthaccess>=0.14.0",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "xarray"
]
